--- a/CMA/View/Details/LoanDetails.xaml
+++ b/CMA/View/Details/LoanDetails.xaml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms" 
 xmlns:local="clr-namespace:CMA;assembly=CMA" 
-xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" Title="Loan Details test2"
+xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" Title="Loan Details"
 x:Class="CMA.LoanDetails"  
 >
 	<ContentPage.BindingContext>
