--- a/CMA/View/Login/Login.xaml
+++ b/CMA/View/Login/Login.xaml
@@ -49,7 +49,7 @@
 			<StackLayout>
 			</StackLayout>
 			<StackLayout Padding="20">
-				<Button x:Name="btnLogin" HorizontalOptions="FillAndExpand" Text="Sign In" BackgroundColor="Aqua" IsEnabled="{Binding IsLoginEnalble}" />
+				<Button x:Name="btnLogin" HorizontalOptions="FillAndExpand" Text="Login" BackgroundColor="Aqua" IsEnabled="{Binding IsLoginEnalble}" />
 			</StackLayout>
 		</StackLayout>
 	</ContentPage.Content>
