Abhishek/Kevin-Integrated screens

--- a/CMA/View/Login/ChangePassword.xaml
+++ b/CMA/View/Login/ChangePassword.xaml
@@ -2,53 +2,58 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="CMA.ChangePassword"   xmlns:controls="clr-namespace:XLabs.Forms.Controls;assembly=XLabs.Forms"
-             xmlns:local="clr-namespace:CMA;assembly=CMA" Title="Cnage Password">
+             xmlns:local="clr-namespace:CMA;assembly=CMA" Title="Change Password">
   <ContentPage.BindingContext>
     <local:VMChangePassword/>
   </ContentPage.BindingContext>
   <ContentPage.Content>
-    <StackLayout Orientation="Vertical" VerticalOptions="Center" Padding="10">
-      <StackLayout Orientation="Horizontal" HorizontalOptions="FillAndExpand" Padding="10">
-        <Grid VerticalOptions="FillAndExpand" Padding="5">
+    <StackLayout Orientation="Vertical" VerticalOptions="CenterAndExpand"  Padding="10" >
+     <ScrollView>
+      <StackLayout Orientation="Vertical"  >
+         
+        <Grid >
           <Grid.RowDefinitions>
             <RowDefinition Height="50" />
             <RowDefinition Height="50" />
             <RowDefinition Height="50" />
           </Grid.RowDefinitions>
           <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="200" />
             <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="30" />
+            <ColumnDefinition Width="40" />
+
           </Grid.ColumnDefinitions>
-          <!--					<Label Text="Current Password" Grid.Column="0" Grid.Row="0" VerticalOptions="Center">
-					</Label>-->
-          <Entry x:Name="txtOldPassword" IsPassword="{Binding PIsPassword1}"  Grid.Column="0" Grid.Row="0" TextColor="White" HorizontalOptions="FillAndExpand" Text="{Binding PCurrentPassword}" Placeholder="Old Password">
+         
+          <Entry x:Name="txtOldPassword" IsPassword="{Binding PIsPassword1}"  Grid.Column="0" Grid.Row="0" TextColor="White" HorizontalOptions="FillAndExpand"  Text="{Binding PCurrentPassword}" Placeholder="Old Password">
           </Entry>
           <controls:CheckBox  x:Name="check1" Checked="{Binding PShowPassword1}" IsEnabled="{Binding IsPasswordEnable }" Grid.Column="1" Grid.Row="0" />
-          <Label  Text="Show" YAlign="Center" HorizontalOptions="StartAndExpand" FontSize="17"  TextColor="White" Grid.Column="2" Grid.Row="0" />
+          <Label  Text="Show" YAlign="Center" HorizontalOptions="StartAndExpand" FontSize="12"  TextColor="White" Grid.Column="2" Grid.Row="0" />
 
-          <!--					<Label Text="New Password" Grid.Column="0" Grid.Row="1" VerticalOptions="Center">
-					</Label>-->
-          <Entry x:Name="txtNewPassword" IsPassword="{Binding PIsPassword2}" Grid.Column="0" Grid.Row="1" Text="{Binding PNewPassword}"  IsEnabled="{Binding IsNewPasswordEnable}" TextColor="White" HorizontalOptions="FillAndExpand" Placeholder="New Password">
+       
+          <Entry x:Name="txtNewPassword" IsPassword="{Binding PIsPassword2}" HorizontalOptions="FillAndExpand" Grid.Column="0" Grid.Row="1" Text="{Binding PNewPassword}"  IsEnabled="{Binding IsNewPasswordEnable}" TextColor="White"  Placeholder="New Password">
           </Entry>
-          <controls:CheckBox  x:Name="check2" Checked="{Binding PShowPassword2}" IsEnabled="{Binding IsNewPasswordEnable }" Grid.Column="1" Grid.Row="1" />
-          <Label  Text="Show" YAlign="Center" HorizontalOptions="StartAndExpand" FontSize="17"  TextColor="White" Grid.Column="2" Grid.Row="1" />
+          <controls:CheckBox  x:Name="check2" Checked="{Binding PShowPassword2}" HorizontalOptions="StartAndExpand" IsEnabled="{Binding IsNewPasswordEnable }" Grid.Column="1" Grid.Row="1" />
+          <Label  Text="Show" YAlign="Center" HorizontalOptions="FillAndExpand" FontSize="12"  TextColor="White" Grid.Column="2" Grid.Row="1" />
 
-          <!--					<Label Text="Confirm Password" Grid.Column="0" Grid.Row="2" VerticalOptions="Center">
-					</Label>-->
+         		
           <Entry x:Name="txtConfirmPassword" IsPassword="{Binding PIsPassword3}" Grid.Column="0" Grid.Row="2" TextColor="White" HorizontalOptions="FillAndExpand" Text="{Binding ConfirmPassword}" Placeholder="Confirm Password" IsEnabled="{Binding IsConfirmPasswordEnable}">
-            -->
+
           </Entry>
           <controls:CheckBox  x:Name="check3" Checked="{Binding PShowPassword3}" IsEnabled="{Binding IsConfirmPasswordEnable }" Grid.Column="1" Grid.Row="2" />
-          <Label  Text="Show" YAlign="Center" HorizontalOptions="FillAndExpand"  FontSize="17" TextColor="White" Grid.Column="2" Grid.Row="2"/>
+          <Label  Text="Show" YAlign="Center" HorizontalOptions="FillAndExpand"  FontSize="12" TextColor="White" Grid.Column="2" Grid.Row="2"/>
 
         </Grid>
-      </StackLayout>
+
+      
       <StackLayout Orientation="Horizontal" HorizontalOptions="FillAndExpand" Padding="20">
-        <Button x:Name="btnChange" TextColor="Black" Text="Change"  HorizontalOptions="FillAndExpand" IsEnabled="{Binding IsChangeButtonEnable}">
+        <Button x:Name="btnChange" TextColor="Black" Text="Change"  HorizontalOptions="FillAndExpand" Command="{Binding Reset}" IsEnabled="{Binding IsChangeButtonEnable}">
         </Button>
         <Button x:Name="btnCancel" TextColor="Black" Text="Cancel"   HorizontalOptions="FillAndExpand" IsEnabled="{Binding IsCancelButtonEnable}">
         </Button>
       </StackLayout>
+      </StackLayout>
+      </ScrollView>
+
     </StackLayout>
   </ContentPage.Content>
 </ContentPage>
